--- a/style.css
+++ b/style.css
@@ -1,27 +1,105 @@
+
 .red-text {
-    font-family:Pacifico;
-    color: red;
-    font-size: 150px;
+  font-family: Pacifico;
+  color: red;
+  font-size: 150px;
+}
+
+center {
+  font-size: large;
+  margin-top: 60px;
+}
+
+h2 {
+  margin-left: 100vh;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-image: url("/a.jpg");
+}
+
+ul, li {
+  text-indent: 0;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  border: 0;
+}
+
+body {
+  background-color: #000;
+  color: #999;
+  font: 100%/18px helvetica, arial, sans-serif;
+}
+
+canvas {
+  cursor: crosshair;
+  display: block;
+  left: 0;
+  position: absolute;
+  top: 0;
+  z-index: 20;
+}
+
+#header img {
+  width: 100%;
+  height: 20%;
+}
+
+#bg img {
+  width: 100%;
+  height: 80%;
+}
+
+#header, #bg {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 10;
+}
+
+#header {
+  top: 0;
+}
+
+#bg {
+  position: fixed;
+  z-index: 1;
+  bottom: 0;
+}
+
+audio {
+  position: fixed;
+  display: none;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  z-index: 5;
+}
+
+/* Media query for screens with a maximum width of 768px */
+@media only screen and (max-width: 768px) {
+  body {
+      font-size: 16px; /* Adjust the font size for smaller screens */
   }
-  center{
-    font-size: large;
-    margin-top: 60px;
+  .red-text {
+    font-size: 100px;
   }
-  h2{
-    margin-left: 100vh;
+  
+}
+
+/* Media query for screens with a minimum width of 1200px */
+/* @media only screen and (min-width: 1200px) { */
+  h2 {
+      margin-left: 10px; /* Adjust the margin for larger screens */
   }
-html,body{height:100%;margin:0;padding:0;
-background-image: url("/a.jpg");}
-ul,li{text-indent:0;text-decoration:none;margin:0;padding:0}
-img{border:0}
-body{
-  background-color:#000;
-  color:#999;
-  font:100%/18px helvetica, arial, sans-serif}
-canvas{cursor:crosshair;display:block;left:0;position:absolute;top:0;z-index:20}
-#header img{width:100%; height:20%;}
-#bg img{width:100%; height:80%;}
-#header,#bg{position:fixed;left:0;right:0;z-index:10}
-#header{top:0}
-#bg{position:fixed;z-index:1;bottom:0}
-audio{position:fixed;display:none;bottom:0;left:0;right:0;width:100%;z-index:5}
+
+/* } */
+
