--- a/style.css
+++ b/style.css
@@ -97,9 +97,9 @@ audio {
 
 /* Media query for screens with a minimum width of 1200px */
 /* @media only screen and (min-width: 1200px) { */
-  h2 {
-      margin-left: 10px; /* Adjust the margin for larger screens */
-  }
+/*   h2 {
+      text-align: center; /* Adjust the margin for larger screens */
+/*   } */ */
 
 /* } */
 
